src/base/objects/Protocol_Interest__c/Protocol_Interest__c.object-meta.xml
<CustomObject>
    <label>Protocol Interest</label>
    <nameField>
        <displayFormat>PI-{0000}</displayFormat>
        <label>Protocol Interest Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protocol Interests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>