src/base/objects/Protocol_Interest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Protocol Interests</relationshipLabel>
    <relationshipName>Protocol_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>