src/base/objects/Protocol_Interest__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Protocol Interests</relationshipLabel>
    <relationshipName>Protocol_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>