src/base/objects/Protocol_Interest__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Protocol Interests</relationshipLabel>
    <relationshipName>Protocol_Interests</relationshipName>
    <type>Lookup</type>
</CustomField>